# cvcl

./: CMakeLists.txt  README.md  facedetect.cpp  main.cpp
